# mathslib

./: .gitignore  Cargo.toml
src/: lib.rs
src/generals/: binomial_coefficient.rs  decimal.rs  mod.rs
src/generals/differential_methods/: finite_difference.rs  mod.rs  test.rs
src/optimize/: mod.rs
src/optimize/multivariate/: mod.rs  steepdescent.rs
src/optimize/scalar/: bound.rs  bracket.rs  mod.rs  newtonraphson.rs  test.rs
