[package]
name = "mathslib"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/mathslib/mathslib"
description = "A math library for Rust"
license = "Apache-2.0"

[dependencies]
num-traits = "0.2"
thiserror = "1.0"

[features]
solve = []
optimize = []
stats = []

[lib]
name = "mathslib"
path = "src/lib.rs"